--- a/src/index.css
+++ b/src/index.css
@@ -85,4 +85,8 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+
+  .no-scrollbar:hover::-webkit-scrollbar {
+    display: none;
+  }
 }
